<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/fingerprint_header">

        <SwitchPreferenceCompat
            app:key="App"
            app:title="@string/App"
            app:defaultValue="false"/>

        <SwitchPreferenceCompat
            app:key="Sleep"
            app:title="@string/Sleep"
            app:defaultValue="false"/>

        <SwitchPreferenceCompat
            app:key="Hibernate"
            app:title="@string/Hibernate"
            app:defaultValue="false"/>


        <SwitchPreferenceCompat
            app:key="Shutdown"
            app:title="@string/Shutdown"
            app:defaultValue="false"/>

 <SwitchPreferenceCompat
            app:key="Lock"
            app:title="@string/Lock"
            app:defaultValue="false"/>

        <SwitchPreferenceCompat
            app:key="Signout"
            app:title="@string/Signout"
            app:defaultValue="false"/>

        <SwitchPreferenceCompat
            app:key="Restart"
            app:title="@string/Restart"
            app:defaultValue="false"/>


    </PreferenceCategory>


</PreferenceScreen>